logs/tinyos.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nesdoc'...
Compiling './lib/python3.5/site-packages/nesdoc/components.py'...
***   File "./lib/python3.5/site-packages/nesdoc/components.py", line 20
    ht.pfnsig(elem, lambda (name): "<b>%s</b>" % name)
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nesdoc/graph.py'...
***   File "./lib/python3.5/site-packages/nesdoc/graph.py", line 99
    styles = ['label="%s"' % function_signature_str(elem, lambda (name): "X")]
                                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nesdoc/interfaces.py'...
***   File "./lib/python3.5/site-packages/nesdoc/interfaces.py", line 25
    ht.pfnsig(fn, lambda (name): '<a href="#%s">%s</a>' % (name, name))
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nesdoc/utils.py'...
***   File "./lib/python3.5/site-packages/nesdoc/utils.py", line 35
    return nfind(lambda (b): a == b, l)
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tinyos'...
Compiling './lib/python3.5/site-packages/tinyos/elf.py'...
***   File "./lib/python3.5/site-packages/tinyos/elf.py", line 80
    SHT_LOPROC      = 0x70000000L
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tinyos/message'...
Compiling './lib/python3.5/site-packages/tinyos/message/MoteIF.py'...
***   File "./lib/python3.5/site-packages/tinyos/message/MoteIF.py", line 92
    except Exception, x:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tinyos/misc'...
Listing './lib/python3.5/site-packages/tinyos/packet'...
Compiling './lib/python3.5/site-packages/tinyos/packet/PacketSource.py'...
***   File "./lib/python3.5/site-packages/tinyos/packet/PacketSource.py", line 64
    except Exception, x:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tinyos/packet/Platform.py'...
***   File "./lib/python3.5/site-packages/tinyos/packet/Platform.py", line 85
    except Exception, x:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tinyos/packet/SFProtocol.py'...
***   File "./lib/python3.5/site-packages/tinyos/packet/SFProtocol.py", line 50
    print "SFProtocol : version error"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tinyos/packet/SerialProtocol.py'...
***   File "./lib/python3.5/site-packages/tinyos/packet/SerialProtocol.py", line 81
    print "Warning: last ack not cleared"
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tinyos/packet/SocketIO.py'...
***   File "./lib/python3.5/site-packages/tinyos/packet/SocketIO.py", line 55
    print "SocketIO: Connecting socket to "+str(self.host)+":"+str(self.port)
                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tinyos/tos.py'...
***   File "./lib/python3.5/site-packages/tinyos/tos.py", line 47
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tinyos/tossim'...
Compiling './lib/python3.5/site-packages/tinyos/tossim/TossimApp.py'...
***   File "./lib/python3.5/site-packages/tinyos/tossim/TossimApp.py", line 255
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tinyos/tossim/TossimNescDecls.py'...
***   File "./lib/python3.5/site-packages/tinyos/tossim/TossimNescDecls.py", line 143
    except Exception, inst:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tinyos/utils'...
Compiling './lib/python3.5/site-packages/tinyos/utils/Singleton.py'...
***   File "./lib/python3.5/site-packages/tinyos/utils/Singleton.py", line 84
    raise SingletonException, 'Can not override __new__ in a Singleton'
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tinyos/utils/Watcher.py'...
***   File "./lib/python3.5/site-packages/tinyos/utils/Watcher.py", line 63
    print 'KeyBoardInterrupt'
                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/tinyos-2.1.2.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
